<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_data"
            android:title="@string/menu_data" />

        <item
            android:id="@+id/nav_webview"
            android:title="@string/menu_webview" />

        <item
            android:id="@+id/nav_background_task"
            android:title="@string/menu_background_task" />

        <item
            android:id="@+id/nav_hardware"
            android:title="@string/menu_hardware" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_files"
            android:title="@string/menu_files" />

        <item
            android:id="@+id/nav_network"
            android:title="Сетевой ресурс" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Выйти" />
    </group>

</menu>
