<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.zhirkova.mireaproject.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.zhirkova.mireaproject.DataFragment"
        android:label="@string/title_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_webview"
        android:name="ru.mirea.zhirkova.mireaproject.WebViewFragment"
        android:label="@string/title_webview"
        tools:layout="@layout/fragment_webview" />

    <fragment
        android:id="@+id/nav_background_task"
        android:name="ru.mirea.zhirkova.mireaproject.BackgroundTaskFragment"
        android:label="@string/title_background_task"
        tools:layout="@layout/fragment_background_task" />

    <fragment
        android:id="@+id/nav_hardware"
        android:name="ru.mirea.zhirkova.mireaproject.HardwareFragment"
        android:label="@string/menu_hardware"
        tools:layout="@layout/fragment_hardware" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.zhirkova.mireaproject.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_files"
        android:name="ru.mirea.zhirkova.mireaproject.FilesFragment"
        android:label="@string/menu_files"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/nav_network"
        android:name="ru.mirea.zhirkova.mireaproject.NetworkFragment"
        android:label="Сетевой ресурс" />

</navigation>
